log
Sat 22 Mar 2025 12:20:50 AM UTC: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat 22 Mar 2025 12:58:35 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
0a2b508
Sat 22 Mar 2025 12:59:29 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:19: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |          elemento = i;
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
c7489dc
Sat 22 Mar 2025 01:03:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ff1ea86
Sat 22 Mar 2025 01:06:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:32: error: too few arguments to function ‘calloc’
   48 |         int * elemento = (int*)calloc(sizeof(int));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/lcxvgkg659vbvdq86mhxa599wn48f35c-glibc-2.40-36-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
9be487a
